--- a/package.json
+++ b/package.json
@@ -11,20 +11,16 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-<<<<<<< HEAD
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
     "react": "^19.1.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
+    "react-icon": "^1.0.0",
     "react-icons": "^5.5.0",
+    "react-router": "^7.8.0",
     "react-router-dom": "^7.7.1",
     "universal-cookie": "^8.0.1"
-=======
-    "bootstrap": "^5.3.7",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-router-dom": "^7.7.1"
->>>>>>> a6c2a35c224a0b515445a8c1acea1b16485acd8e
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
